Updating to JDK 11
https://github.com/eclipse-ee4j/jaxb-ri/issues/1461

Automatic updates
https://jenkins.updater.j2eeguys.com/

Signed-off-by: Honor Systems Updater Jenkins <hsujenkins@j2eeguys.com>